<resources>
    <string name="app_name">Mainstagram</string>
    <string name="stevanivivianlai_artha_meisyanurdianita">stevanivivianlai, artha, meisyanurdianita,</string>
    <string name="marisaatnitaaaa">marisaatnitaaaa</string>
    <string name="_0">0</string>
    <string name="_4_545">4.545</string>
    <string name="_1_378">1.378</string>
    <string name="postingan">Postingan</string>
    <string name="pengikut">Pengikut</string>
    <string name="mengikuti">Mengikuti</string>
    <string name="icha">Icha</string>
    <string name="diikuti_oleh">Diikuti oleh</string>
    <string name="dan_62_lainnya">dan 62 lainnya</string>
    <string name="ikuti">Ikuti</string>
    <string name="kirim_pesan">Kirim Pesan</string>
    <string name="email">email</string>
</resources>